# melisa-on-saferoom-project

./: Cargo.toml  LICENSE  README.md
doc/: book.toml
doc/src/: Introduction.md  SUMMARY.md  contributing.md  custom-pdf.css  introduction.md  security.md  troubleshooting.md
doc/src/architecture/: README.md  client-internals.md  deployment-engine-internals.md
doc/src/client-cli/: README.md  authentication.md  tunnels.md
doc/src/concepts/: configuration.md  mel-format.md  projects.md
doc/src/getting-started/: README.md
doc/src/server-cli/: README.md  deployment-engine.md
doc/src/testing/: README.md  python-tests.md  running-tests.md  rust-tests.md
src/: fix.sh  main.rs
src/cli/: container.rs  executor.rs  loading.rs  melisa_cli.rs  mod.rs  prompt.rs  wellcome.rs
src/core/: container.rs  metadata.rs  mod.rs  project_management.rs  root_check.rs  setup.rs  user_management.rs
src/deployment/: dependency.rs  deployer.rs  mel_parser.rs  mod.rs  tests.rs
src/distros/: distro.rs  mod.rs
src/melisa_client/: install.sh
src/melisa_client/src/: auth.sh  db.sh  exec.sh  melisa  utils.sh
src/melisa_client/ut_/: _test_2.py  test_melisa.py  test_tunnel_and_crossregion.py
src/tests/: mod.rs
