[package]
name = "saferoom"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.183"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
crossterm = "0.27"
ctrlc = "3.4"
fs = "0.0.5"
rustyline = { version = "17.0.2", features = ["derive"] }
colored = "2.1.0"
rand = "0.8.5"
sysinfo = "0.38.4"
chrono = "0.4"
indicatif = "0.18.4"
tokio = { version = "1.50.0", features = ["full"] }
