[package]
name = "melisa"
version = "0.1.3"
authors = ["Erick Adriano Sebastian <ernobaproject@gmail.com>"]
description = "Management Environment Linux Sandbox"
edition = "2024"

[dependencies]
libc = "0.2.183"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
crossterm = "0.27"
ctrlc = "3.4"
fs = "0.0.5"
rustyline = { version = "17.0.2", features = ["derive"] }
colored = "2.1.0"
rand = "0.8.5"
sysinfo = "0.38.4"
chrono = "0.4"
indicatif = "0.18.4"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1.44"
thiserror = "2.0"  # Versi terbaru biar aman

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 'z'     # Optimasi untuk ukuran (bukan kecepatan)
lto = true          # Link Time Optimization (menghapus kode yang tidak terpakai)
codegen-units = 1   # Mengurangi paralelisasi untuk optimasi lebih baik
panic = 'abort'     # Menghapus logika unwinding saat panic
strip = true        # Otomatis menghapus simbol debug dari biner
